Fix question-heading spacing issue
Amazingly, the bottom margin we add to all question headings has
been, up to now, not applied. It turns out that without a
`block_formatting_context`, block-level children of parent elements
will not respect margins added to the question heading.

Setting an explicit height has done the trick.

This change means lots of changes to our form elements, but I
think it's a big improvement.

More on collapsing margins:
https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Box_Model/Mastering_margin_collapsing

More on block formatting contexts:
https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Block_formatting_context

--- a/toolkit/scss/forms/_questions.scss
+++ b/toolkit/scss/forms/_questions.scss
@@ -12,6 +12,11 @@
   .hint {
     margin-bottom: 0;
   }
+
+  // This preserves the vertical margins set on the .question-headings
+  legend {
+    height: 100%;
+  }
 }
 
 .question-first {
